# imageRegistration

./: .gitignore  CHEATSHEET.txt  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/experiments/: ablation_features.yaml  baseline.yaml  direct_hybrid_sar.yaml  direct_hybrid_synthetic.yaml  eulerian_hybrid_sar.yaml  gate_flow_ms_attn_synthetic.yaml  gate_flow_ms_synthetic.yaml  gate_flow_synthetic.yaml  hybrid_ode_numpy.yaml  hybrid_ode_sar.yaml  neural_ode_numpy.yaml  neural_ode_synthetic.yaml  simple_cnn_numpy.yaml
data/: atlas.npy
data/test/: subject_000.npy  subject_001.npy  subject_002.npy  subject_003.npy  subject_004.npy  subject_005.npy
data/train/: subject_000.npy  subject_001.npy  subject_002.npy  subject_003.npy  subject_004.npy  subject_005.npy  subject_006.npy  subject_007.npy  subject_008.npy  subject_009.npy  subject_010.npy  subject_011.npy  subject_012.npy  subject_013.npy  subject_014.npy  subject_015.npy  subject_016.npy  subject_017.npy  subject_018.npy  subject_019.npy  subject_020.npy  subject_021.npy  subject_022.npy  subject_023.npy  subject_024.npy  subject_025.npy  subject_026.npy  subject_027.npy  subject_028.npy  subject_029.npy
data/val/: subject_000.npy  subject_001.npy  subject_002.npy  subject_003.npy  subject_004.npy  (+1 more)
scripts/: ablation.py  evaluate.py  generate_dummy_data.py  generate_synthetic_patches.py  inspect_patches.py  train.py  train_hybrid_patches.py  train_image_pairs.py  train_numpy.py  visualize_filters.py  visualize_results.py
tests/: test_metrics.py  test_models.py
(+42 files in other folders)
